@@ -180,6 +180,14 @@ class CoreParserFunctions {
 			return wfMsgForContent( 'nosuchspecialpage' );
 		}
 	}
+	
+	public static function defaultsort( $parser, $text ) {
+		$text = trim( $text );
+		if( strlen( $text ) > 0 )
+			$parser->setDefaultSort( $text );
+		return '';
+	}
+	
 }
 
 ?>
